<resources>
    <string name="app_name">MenusPickers</string>
    <string name="favorite_string">favorite</string>
    <string name="settings_string">settings</string>
    <string name="dummy_string">kanha rajput is a hero, He knows it but he never-ever show attitude over this thing. This is how great man behave . You got it who is great man.</string>
    <string name="alert_message">Click on continue.</string>
    <string name="ok_string">OK</string>
    <string name="cancel_string">Cancel</string>
    <string name="dialog_title">Choose 3 Fav Color</string>
    <string name="sing_in">Sign in</string>
    <string name="email_hint">email address</string>
    <string name="pass_hint">password</string>
    <string name="time_btn_string">Select Time</string>
    <string name="date_btn_string">SELECT DATE</string>
    <string name="second_activity_name">Set Up Navigation</string>

    <string-array name="color_list">
        <item>Yellow</item>
        <item>Purple</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Orange</item>
    </string-array>

</resources>