<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/sing_in"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="italic|bold"
        android:background="?attr/colorSecondary"/>

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:hint="@string/email_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:inputType="textPassword"
        android:hint="@string/pass_hint"/>
</LinearLayout>